Adding format on save

--- a/edittor_settings.json
+++ b/edittor_settings.json
@@ -1,5 +1,6 @@
 {
     "window.zoomLevel": 1,
+    "editor.formatOnSave": true,
     "editor.inlineSuggest.enabled": true,
     "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
     "editor.guides.bracketPairs": "active"
